server/compilers/goLiteJS/src/test/ml2/invalid/func1.go
// parameter in function call does not type check
package main

func f() {}

func main() {
    f(23)
}
